<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add_location_brown"
        android:id="@+id/name"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:contentDescription="@string/trigger_name"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:hint="@string/trigger_loc_hint"
        android:id="@+id/location_wifi_name"
        android:layout_toEndOf="@id/name"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_brown"
        android:id="@+id/settings"
        android:contentDescription="@string/trigger_settings"
        android:padding="8dp"
        android:background="@android:color/transparent"
        android:layout_below="@id/name"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:paddingStart="8dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/name"
        android:layout_toEndOf="@id/settings"
        android:id="@+id/isConnect"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/dialog_radio_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_enter"
            android:textColor="@color/cast_intro_overlay_background_color" />
        <RadioButton
            android:id="@+id/dialog_radio_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_exit"
            android:textColor="@color/cast_intro_overlay_background_color" />

    </RadioGroup>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_settings_bluetooth_brown"
        android:contentDescription="@string/trigger_bluetooth"
        android:layout_below="@id/isConnect"
        android:padding="8dp"
        android:id="@+id/bluetooth"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"/>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/content_isbluetoothon"
        android:layout_below="@id/isConnect"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/bluetooth"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_music_note_brown"
        android:contentDescription="@string/trigger_media_volume"
        android:layout_below="@id/bluetooth"
        android:padding="8dp"
        android:id="@+id/media_sound"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_toEndOf="@id/media_sound"
        android:layout_marginTop="8dp"
        android:id="@+id/media_seekbar"
        android:layout_below="@id/bluetooth" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ring_volume_brown"
        android:contentDescription="@string/trigger_ring_volume"
        android:layout_below="@id/media_seekbar"
        android:padding="8dp"
        android:id="@+id/ring_volume"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/ring_seekbar"
        android:layout_below="@id/media_seekbar"
        android:layout_toEndOf="@id/ring_volume"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_signal_wifi_4_bar_brown"
        android:layout_below="@id/ring_seekbar"
        android:contentDescription="@string/trigger_wifi"
        android:padding="8dp"
        android:id="@+id/wifiOn"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/content_iswifion"
        android:layout_below="@id/ring_seekbar"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/wifiOn"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:background="@color/colorAccent"
        android:layout_marginEnd="4dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/wifiOn"
        android:text="@string/trigger_save"
        />

</RelativeLayout>
