<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/dialog_border">

    <ImageButton
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_name"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_wifi_brown" />

    <Spinner
        android:id="@+id/spinner_wifi_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name"
        android:dropDownSelector="@color/green"
        android:fontFamily="sans-serif-medium"
        android:buttonTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
         />

    <TextView
        android:id="@+id/wifi_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/name"
        android:layout_alignBottom="@id/name"
        android:hint="@string/trigger_loc_hint"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:visibility="invisible" />


    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_settings"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_settings_brown" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/isConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_toEndOf="@id/settings"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="6dp">

        <RadioButton
            android:id="@+id/dialog_radio_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_connect"
            android:buttonTint="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             />

        <RadioButton
            android:id="@+id/dialog_radio_disconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_disconnect"
            android:fontFamily="sans-serif"
            android:buttonTint="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             />
    </RadioGroup>


    <ImageButton
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/isConnect"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_bluetooth"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_settings_bluetooth_brown" />


    <Spinner
        android:id="@+id/content_isbluetoothon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/isConnect"
        android:layout_toEndOf="@id/bluetooth"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
       />

    <ImageButton
        android:id="@+id/wifiOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetooth"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_wifi"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_signal_wifi_4_bar_brown" />

    <Spinner
        android:id="@+id/content_iswifion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bluetooth"
        android:fontFamily="sans-serif-medium"
        android:buttonTint="@color/colorAccent"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_toEndOf="@id/wifiOn"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" />

    <ImageButton
        android:id="@+id/ring_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiOn"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_ring_volume"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_ring_volume_brown"/>

    <SeekBar
        android:id="@+id/ring_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifiOn"
        android:paddingTop="12dp"
        android:layout_toEndOf="@id/ring_volume"
         />

    <ImageButton
        android:id="@+id/media_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ring_seekbar"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_media_volume"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:src="@drawable/ic_music_note_brown"
         />

    <SeekBar
        android:id="@+id/media_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ring_seekbar"
        android:layout_toEndOf="@id/media_sound"
        android:paddingTop="12dp"
        android:layout_marginTop="8dp"/>

    <ImageButton
        android:id="@+id/notif_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/media_seekbar"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/trigger_notif_volume"
        android:src="@drawable/ic_notifications_black_24dp" />

    <SeekBar
        android:id="@+id/notif_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/media_seekbar"
        android:paddingTop="12dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/media_sound"
         />


    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/notif_seekbar"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/trigger_save" />

</RelativeLayout>
